# automan

./: README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
src/automan/: __init__.py  cli.py  enricher.py  models.py  normalizer.py  parser.py  probe.py
src/automan/render/: __init__.py  manpage.py  markdown.py
tests/fixtures/: curl.help.txt
tests/integration/: test_probe.py
tests/unit/: test_normalizer.py  test_parser.py
